2008-05-25 [holger]	0.16cvs3

	* src/notification_foldercheck.c
		Maybe fix adjustment jumping around in
		foldercheck window

2008-05-25 [holger]	0.16cvs2

	* .cvsignore
		More files to ignore
	* src/notification_foldercheck.c
		Close foldercheck dialog on ESC

2008-04-21 [colin]	0.16cvs1

	* po/fr.po
		Fix an ugly translation

2008-04-18 [paul]	0.16

	0.16 released

	* po/fr.po
		added by wwp

	* po/fi.po
	* po/it.po
	* po/pt_BR.po
		updated by Flammie Pirinen, Andrea Spadaccini and
		Frederico Goncalves Guimaraes

2008-03-15 [colin]	0.15cvs8

	* src/notification_core.c
	* src/notification_core.h
	* src/notification_popup.c
	* src/notification_trayicon.c
		Factorize mainwindow show code, and fix
		folderview's scroll like in Trayicon

2008-03-12 [colin]	0.15cvs7

	* configure.ac
		Enable -Wall

2008-03-05 [holger]	0.15cvs6

	* src/notification_trayicon.c
		Fix trayicon when compiled without
		libnotify.

2008-02-25 [holger]	0.15cvs5

	* src/notification_plugin.c
	* src/notification_trayicon.c
	* src/notification_trayicon.h
		If the "hide on startup" trayicon option is
		set, make sure that the trayicon is really
		visible. Otherwise, the main window may
		be hidden and inaccessible.  

2008-02-17 [holger]	0.15cvs4

	* src/notification_banner.c
		Clean up (and fix) color inversion on mouse over

2008-02-16 [holger]	0.15cvs3

	* src/notification_banner.c
	* src/notification_plugin.c
	* src/notification_prefs.c
	* src/notification_prefs.h
		Make banner width configurable. This is reasonable
		on multi-monitor setups.

2008-02-16 [holger]	0.15cvs2

	* src/notification_banner.c
	* src/notification_core.c
	* src/notification_core.h
		Rework banner module widget hierarchy. Invert message
		box color on mouse-over. Add right-click context menu
		to reply to message.

2008-02-09 [paul]	0.15cvs1

	* Makefile.am
		enter the po/ dir sooner

2008-02-08 [paul]	0.15

	0.15 released

2008-02-08 [paul]	0.14cvs5

	* po/fi.po
	* po/it.po
	* po/zh_CN.po